--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <img id="yo-kai86" src="no-kai.png" alt="no-kai">
             <img id="yo-kai87" src="no-kai.png" alt="no-kai">
             <img id="yo-kai88" src="no-kai.png" alt="no-kai">
-
+</div>
         <input type="text" id="answer-input" placeholder="Escribe el nombre del Yo-kai.">
         <div class="info">
             <p>Tiempo: <span id="time">00:00:00</span></p>
